--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_polygon_clipper
+name: polygon_clipper
 description: Flutter Custom Clipper using Polygon shapes
 version: 0.0.1
 author: Leonardo Caldas <leonardo.ferreira.caldas@gmail.com>
