--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: polygon_clipper
-description: Flutter Custom Clipper using Polygon shapes
-version: 0.0.2
+description: A plugin to clip a Widget into a polygon shape. Works with any kind of Widget.
+version: 1.0.0
 author: Leonardo Caldas <leonardo.ferreira.caldas@gmail.com>
 homepage: https://github.com/leonardocaldas/flutter-polygon-clipper
 
