Upgraded to Dart 2

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: polygon_clipper
 description: A plugin to clip a Widget into a polygon shape. Works with any kind of Widget.
-version: 1.0.0
-author: Leonardo Caldas <leonardo.ferreira.caldas@gmail.com>
+version: 2.1.0
+authors:
+  - Leonardo Caldas <leonardo.ferreira.caldas@gmail.com>
+  - Ravi Teja Gudapati <tejainece@gmail.com>
 homepage: https://github.com/leonardocaldas/flutter-polygon-clipper
 
 dependencies:
@@ -9,4 +11,4 @@ dependencies:
     sdk: flutter
 
 environment:
-  sdk: ">=1.19.0 <2.0.0"
+  sdk: ">=2.0.0 <3.0.0"
