--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,6 @@
 name: example
 description: An example of how to use Flutter plugin polygon clipper.
+publish_to: none
 
 version: 1.0.0+1
 
@@ -9,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  polygon_clipper:
+  flutter_polygon:
     path: ../
 
   cupertino_icons: ^0.1.2
