--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_polygon
 description: A plugin with tools for working with polygons in Flutter. Provides a clipper (PolygonClipper, ClipPolygon) and border (PolygonBorder)
-version: 0.0.1
+version: 0.1.0
 homepage: https://github.com/wietsebuseyne/flutter_polygon
 
 dependencies:
@@ -8,4 +8,4 @@ dependencies:
     sdk: flutter
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.0.0 <3.0.0"
