--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,22 +1,22 @@
 name: example
-description: An example of how to use Flutter plugin polygon clipper.
+description: An example of how to use flutter_polygon
 publish_to: none
 
-version: 1.0.0+1
+version: 1.0.0
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.0.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_polygon:
     path: ../
-
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 flutter:
   uses-material-design: true
