--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -5,14 +5,14 @@ publish_to: none
 version: 1.0.0
 
 environment:
-  sdk: ">=2.0.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_polygon:
     path: ../
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
